[gd_scene load_steps=21 format=3 uid="uid://c30oyit3fjbso"]

[ext_resource type="Script" path="res://script/audio_manager.gd" id="1_nxs1i"]
[ext_resource type="AudioStream" uid="uid://crv2yi16qk1nj" path="res://sound/button_down.wav" id="3_5yfu5"]
[ext_resource type="AudioStream" uid="uid://bjnhh6p2ukg3s" path="res://sound/jump.mp3" id="4_3qxsk"]
[ext_resource type="AudioStream" uid="uid://cqars18fto4vf" path="res://sound/button_up.wav" id="4_7s61m"]
[ext_resource type="AudioStream" uid="uid://17av0562vc1q" path="res://sound/footsteps.mp3" id="5_mokmy"]
[ext_resource type="AudioStream" uid="uid://d0ckafcbps3f" path="res://sound/HurdySample.ogg" id="6_y7vbu"]
[ext_resource type="AudioStream" uid="uid://cxaeyosxq87qd" path="res://sound/glock18-1.wav" id="7_xxwym"]
[ext_resource type="AudioStream" uid="uid://bvoukgx8bcxkj" path="res://sound/itempickup.wav" id="8_t24jm"]
[ext_resource type="AudioStream" uid="uid://1da25rx04ht2" path="res://sound/glock_clipin.wav" id="8_ymc11"]
[ext_resource type="AudioStream" uid="uid://4npahmqlfaky" path="res://sound/buttonclickrelease.wav" id="9_1owqt"]
[ext_resource type="AudioStream" uid="uid://vy21kkyusy5v" path="res://sound/clipempty_pistol.wav" id="10_7bsyh"]
[ext_resource type="AudioStream" uid="uid://crcaase88kycx" path="res://sound/chain_pul2.wav" id="12_v62pc"]
[ext_resource type="AudioStream" uid="uid://bktr3abwd35hc" path="res://sound/shrtblad.wav" id="13_n8hg8"]
[ext_resource type="AudioStream" uid="uid://rhicwap4h258" path="res://sound/ring.wav" id="14_lptmi"]
[ext_resource type="AudioStream" uid="uid://bmvrbi62ub65i" path="res://sound/614897__beetlemuse__close_program_a.wav" id="15_r5bt5"]
[ext_resource type="AudioStream" uid="uid://cg80rbf3t08yi" path="res://sound/614898__beetlemuse__open_program_a.wav" id="16_ll5rq"]
[ext_resource type="AudioStream" uid="uid://cif5rv4vntrx7" path="res://sound/damage1.wav" id="17_cora2"]
[ext_resource type="AudioStream" uid="uid://blk0frehj0kj1" path="res://sound/damage2.wav" id="18_yenie"]
[ext_resource type="AudioStream" uid="uid://c2ntb03q0rtp5" path="res://sound/damage3.wav" id="19_l2gxk"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_m46fy"]
streams_count = 3
stream_0/stream = ExtResource("17_cora2")
stream_1/stream = ExtResource("18_yenie")
stream_2/stream = ExtResource("19_l2gxk")

[node name="AudioManager" type="Node"]
script = ExtResource("1_nxs1i")

[node name="ButtonDownAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_5yfu5")

[node name="ButtonUpAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_7s61m")

[node name="JumpAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_3qxsk")

[node name="FootstepsAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_mokmy")

[node name="MusicAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_y7vbu")

[node name="ShootPistolAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_xxwym")

[node name="ReloadPistolAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_ymc11")

[node name="ItemPickupAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_t24jm")

[node name="ItemEquipAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_1owqt")

[node name="ClipEmptyAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_7bsyh")

[node name="UseKeyAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_v62pc")

[node name="EquipKeyAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_n8hg8")

[node name="PickupKeyAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_lptmi")

[node name="MenuCloseAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_r5bt5")
pitch_scale = 3.0

[node name="MenuOpenAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_ll5rq")
pitch_scale = 3.0

[node name="TakeDamageAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_m46fy")
